[gd_scene load_steps=9 format=3 uid="uid://by2nolvl3kja2"]

[ext_resource type="Script" path="res://HUD/game_ui.gd" id="1_nuj4q"]
[ext_resource type="PackedScene" uid="uid://dl0g7keusp60j" path="res://HUD/cam_texture_rect.tscn" id="2_40hs4"]
[ext_resource type="Shader" path="res://HUD/camera_icon.gdshader" id="3_qro3a"]
[ext_resource type="Script" path="res://HUD/game_timer.gd" id="5_q7nbc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_efi8y"]
resource_local_to_scene = true
shader = ExtResource("3_qro3a")
shader_parameter/hovered_over_hotkey_jump = 0.0
shader_parameter/hovered_over_bind_hotkey = 0.0
shader_parameter/default_col = Color(1, 0.4, 0.2, 1)
shader_parameter/set_col = null
shader_parameter/hover_set_bind_col = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fvlfk"]
resource_local_to_scene = true
shader = ExtResource("3_qro3a")
shader_parameter/hovered_over_hotkey_jump = 0.0
shader_parameter/hovered_over_bind_hotkey = 0.0
shader_parameter/default_col = Color(1, 0.4, 0.2, 1)
shader_parameter/set_col = null
shader_parameter/hover_set_bind_col = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_raggb"]
resource_local_to_scene = true
shader = ExtResource("3_qro3a")
shader_parameter/hovered_over_hotkey_jump = 0.0
shader_parameter/hovered_over_bind_hotkey = 0.0
shader_parameter/default_col = Color(1, 0.4, 0.2, 1)
shader_parameter/set_col = null
shader_parameter/hover_set_bind_col = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mgjl8"]
resource_local_to_scene = true
shader = ExtResource("3_qro3a")
shader_parameter/hovered_over_hotkey_jump = 0.0
shader_parameter/hovered_over_bind_hotkey = 0.0
shader_parameter/default_col = Color(1, 0.4, 0.2, 1)
shader_parameter/set_col = null
shader_parameter/hover_set_bind_col = null

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_nuj4q")

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -204.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 2

[node name="TextureRect" parent="MarginContainer2/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_40hs4")]
material = SubResource("ShaderMaterial_efi8y")
layout_mode = 2
set_color = Color(0.972549, 0.301961, 0, 1)

[node name="TextureRect2" parent="MarginContainer2/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_40hs4")]
material = SubResource("ShaderMaterial_fvlfk")
layout_mode = 2
set_color = Color(0.815686, 0.0784314, 0.243137, 1)

[node name="TextureRect3" parent="MarginContainer2/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_40hs4")]
material = SubResource("ShaderMaterial_raggb")
layout_mode = 2
set_color = Color(0.121569, 0.764706, 0.27451, 1)

[node name="TextureRect4" parent="MarginContainer2/PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_40hs4")]
material = SubResource("ShaderMaterial_mgjl8")
layout_mode = 2
set_color = Color(0, 0.447059, 0.972549, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
script = ExtResource("5_q7nbc")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
horizontal_alignment = 1
vertical_alignment = 1
