[gd_scene load_steps=22 format=3 uid="uid://by2nolvl3kja2"]

[ext_resource type="Script" path="res://UI/HUD/game_ui.gd" id="1_nuj4q"]
[ext_resource type="PackedScene" uid="uid://dl0g7keusp60j" path="res://UI/HUD/cam_texture_rect.tscn" id="2_40hs4"]
[ext_resource type="Shader" path="res://UI/HUD/crown_icon.gdshader" id="2_qutgy"]
[ext_resource type="Texture2D" uid="uid://drg4l0pqroxe6" path="res://assets/crown_sdf.png" id="3_2gtof"]
[ext_resource type="Shader" path="res://UI/HUD/camera_icon.gdshader" id="3_qro3a"]
[ext_resource type="Script" path="res://UI/HUD/crown_tex_rect.gd" id="4_ln6g7"]
[ext_resource type="Script" path="res://UI/HUD/game_timer.gd" id="5_q7nbc"]
[ext_resource type="FontFile" uid="uid://dkb5pled1clyc" path="res://assets/fonts/lithob.ttf" id="8_xoob1"]
[ext_resource type="Shader" path="res://UI/HUD/meter.gdshader" id="9_uurxa"]
[ext_resource type="PackedScene" uid="uid://diletx3442kwe" path="res://VFX/particles/level_up_reward_visual/star_particles.tscn" id="9_wa21m"]
[ext_resource type="Shader" path="res://UI/HUD/life_panel_bg.gdshader" id="11_dvtpw"]
[ext_resource type="Script" path="res://UI/HUD/multiplier_label_container.gd" id="11_h4lke"]
[ext_resource type="Shader" path="res://UI/HUD/clikmi_num_multiplier.gdshader" id="11_knf61"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_31hy8"]
shader = ExtResource("2_qutgy")
shader_parameter/selectable = 0.0
shader_parameter/hovering = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_efi8y"]
resource_local_to_scene = true
shader = ExtResource("3_qro3a")
shader_parameter/hovered_over_hotkey_jump = 0.0
shader_parameter/hovered_over_bind_hotkey = 0.0
shader_parameter/default_col = Color(1, 0.4, 0.2, 1)
shader_parameter/set_col = null
shader_parameter/hover_set_bind_col = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fvlfk"]
resource_local_to_scene = true
shader = ExtResource("3_qro3a")
shader_parameter/hovered_over_hotkey_jump = 0.0
shader_parameter/hovered_over_bind_hotkey = 0.0
shader_parameter/default_col = Color(1, 0.4, 0.2, 1)
shader_parameter/set_col = null
shader_parameter/hover_set_bind_col = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_raggb"]
resource_local_to_scene = true
shader = ExtResource("3_qro3a")
shader_parameter/hovered_over_hotkey_jump = 0.0
shader_parameter/hovered_over_bind_hotkey = 0.0
shader_parameter/default_col = Color(1, 0.4, 0.2, 1)
shader_parameter/set_col = null
shader_parameter/hover_set_bind_col = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mgjl8"]
resource_local_to_scene = true
shader = ExtResource("3_qro3a")
shader_parameter/hovered_over_hotkey_jump = 0.0
shader_parameter/hovered_over_bind_hotkey = 0.0
shader_parameter/default_col = Color(1, 0.4, 0.2, 1)
shader_parameter/set_col = null
shader_parameter/hover_set_bind_col = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ujyid"]
shader = ExtResource("9_uurxa")
shader_parameter/real_time_points_lvl = 0.2
shader_parameter/total_points_lvl = 0.6
shader_parameter/total_col = Color(1, 1, 1, 1)
shader_parameter/real_time_col = Color(1, 0.572549, 0, 1)
shader_parameter/bg_col = Color(0.203922, 0.203922, 0.203922, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_swyrh"]
shader = ExtResource("11_dvtpw")
shader_parameter/flash_switch = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jpbww"]
shader = ExtResource("11_knf61")
shader_parameter/num_clikmis = 5.7

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_nuj4q")

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -267.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/PanelContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer2/PanelContainer/HBoxContainer/MarginContainer2" groups=["CameraHotkey"]]
material = SubResource("ShaderMaterial_31hy8")
layout_mode = 2
texture = ExtResource("3_2gtof")
expand_mode = 2
script = ExtResource("4_ln6g7")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 2

[node name="TextureRect" parent="MarginContainer2/PanelContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_40hs4")]
material = SubResource("ShaderMaterial_efi8y")
layout_mode = 2
set_color = Color(0.972549, 0.301961, 0, 1)

[node name="TextureRect2" parent="MarginContainer2/PanelContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_40hs4")]
material = SubResource("ShaderMaterial_fvlfk")
layout_mode = 2
set_color = Color(0.815686, 0.0784314, 0.243137, 1)

[node name="TextureRect3" parent="MarginContainer2/PanelContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_40hs4")]
material = SubResource("ShaderMaterial_raggb")
layout_mode = 2
set_color = Color(0.121569, 0.764706, 0.27451, 1)

[node name="TextureRect4" parent="MarginContainer2/PanelContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_40hs4")]
material = SubResource("ShaderMaterial_mgjl8")
layout_mode = 2
set_color = Color(0, 0.447059, 0.972549, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 7
theme_override_constants/margin_bottom = 7

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
script = ExtResource("5_q7nbc")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
horizontal_alignment = 1
vertical_alignment = 1

[node name="MeterAndLevelNum" type="VBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -200.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="Meter" type="MarginContainer" parent="MeterAndLevelNum"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="Timer" type="Timer" parent="MeterAndLevelNum/Meter"]
wait_time = 0.5
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="MeterAndLevelNum/Meter"]
material = SubResource("ShaderMaterial_ujyid")
custom_minimum_size = Vector2(20, 400)
layout_mode = 2
size_flags_horizontal = 8

[node name="StarParticles" parent="MeterAndLevelNum/Meter/PanelContainer" instance=ExtResource("9_wa21m")]
process_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="MeterAndLevelNum"]
layout_mode = 2
theme_override_constants/margin_top = 6

[node name="Label" type="Label" parent="MeterAndLevelNum/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_xoob1")
theme_override_font_sizes/font_size = 30
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreEffectsContainer" type="Node2D" parent="."]

[node name="MainScoreMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 5

[node name="Label" type="Label" parent="MainScoreMarginContainer"]
modulate = Color(1, 1, 1, 0.521569)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_xoob1")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="life_margin_container" type="MarginContainer" parent="."]
offset_right = 30.0
offset_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7

[node name="PanelContainer" type="PanelContainer" parent="life_margin_container"]
material = SubResource("ShaderMaterial_swyrh")
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="life_margin_container/PanelContainer"]
layout_mode = 2

[node name="Timer" type="Timer" parent="life_margin_container/PanelContainer"]
process_mode = 3
wait_time = 0.7

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 49.0
grow_vertical = 0
size_flags_horizontal = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("11_h4lke")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer3/HBoxContainer"]
material = SubResource("ShaderMaterial_jpbww")
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("8_xoob1")
theme_override_font_sizes/font_size = 30
text = "x0"
